--- a/package.json
+++ b/package.json
@@ -1,21 +1,28 @@
 {
-  "name": "shharea-server",
-  "version": "1.0.0",
-  "description": "",
-  "main": "server.js",
+  "name": "shharea-server-server",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Bidz42/shharea-server.git"
+  "dependencies": {
+    "bcrypt": "^5.0.1",
+    "body-parser": "^1.20.0",
+    "cloudinary": "^1.32.0",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.2",
+    "express": "^4.18.1",
+    "express-jwt": "^7.7.5",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.6.1",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
+    "nodemailer": "^6.7.8"
   },
-  "author": "Bidz42, Bdaoui",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Bidz42/shharea-server/issues"
-  },
-  "homepage": "https://github.com/Bidz42/shharea-server#readme"
+  "devDependencies": {
+    "nodemon": "^2.0.20"
+  }
 }
